<resources>
    <string name="app_name">HeartScan</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="addSystolic">Systolic</string>
    <string name="addDiastolic">Diastolic</string>
    <string name="addPulse">Pulse</string>
    <string name="addBPM">BPM</string>
    <string name="addmmHg" translatable="false">mmHg</string>
    <string name="addSave">Save</string>
    <string name="addDateTime">"Date &amp; Time"</string>

    <string name="mainHistory">History</string>
    <string name="mainAddNew">Add New</string>
    <string name="mainStatistic">Statistic</string>

    <string name="statFirstParam">Key indicators</string>
    <string name="statSecondParam">Values</string>
</resources>
