<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".act.layouts.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <Button
            android:id="@+id/allHistory"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/buttons"
            android:enabled="true"
            android:fontFamily="@font/poppins"
            android:text="@string/mainHistory"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/statistic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addNew"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/buttons"
            android:enabled="true"
            android:fontFamily="@font/poppins"
            android:text="@string/mainAddNew"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/allHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/statistic"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/buttons"
            android:enabled="true"
            android:fontFamily="@font/poppins"
            android:text="@string/mainStatistic"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/addNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
